    * ser2net 2.5
    * slurm 0.3.3
    * spawn-fcgi 1.6.3
    * sqlite 3.6.23
    * subversion 1.6.9
    * synce-dccm 0.9.1
    * synce-serial 0.10.0
    * tcpproxy 2.0.0-beta15
    * tmux 1.2
    * transmission-cgi 0.0.4
    * trickle 1.07
    * umurmur 0.2.4
    * unrar 3.9.9
    * vnstat 1.10
    * vnstat-cgi 0.6.9
    * vtun 3.0.2
    * xmail 1.26

- Updated tools and hooks:
    * external: Move external files out of tools/external into separate files for each package

- Updated patches:
    * add reiserfs to automountable filesystems
    * change nice names for USB devices (sdax > uStor0x, sdby > uStor1y, ...) 
    * Update usbstorage patches

- Updated packages and libs:
    * bash 3.2.50
    * bftpd 2.6
    * bip 0.8.4
    * bird 1.1.2
    * callmonitor 1.17
    * cryptsetup 1.0.6
    * curl 7.20.0
    * cyassl 1.4.0
    * davfs2 1.4.5
    * dnsmasq 2.52
    * dtmfbox 0.5.0
    * e2fsprogs 1.41.10
    * eSpeak 1.40.02
    * freetype 2.3.12
    * glib 2.22.5
    * haserl 0.9.26
    * inotify-tools 3.14
    * iodine 0.6.0-rc1
    * libart_lgpl 2.3.20
    * libevent 1.4.13
    * libgcrypt 1.4.5
    * libgpg-error 1.7
    * libiconv 1.13.1
    * libpcap 1.0.0
    * libpng 1.2.42
    * libpopt 1.15
    * liblzo 2.03
    * libneon 0.29.3
    * linux-atm 2.5.0
    * lsof 4.81
    * ltrace 0.5 svn 81
    * lua 5.1.4
    * mcabber 0.9.10
    * microperl 5.10.1
    * ntfs-3g 2010.3.6
    * openssh 5.3p1
    * openssl 0.9.8n
    * openvpn 2.1.1
    * php 5.2.13
    * pingtunnel 0.70
    * pjproject 1.0.1
    * pptp 1.7.2
    * privoxy 3.0.16
    * quagga 0.99.16
    * readline 6.1
    * ruby 1.8.6-p368
    * rrdstats 0.7.0
    * rrdtool 1.2.30
    * strace 4.5.19
    * streamripper 1.64.6
    * stunnel 4.32
    * tcpdump 4.0.0
    * tinc 1.0.11
    * tor 0.2.2.10-alpha
    * transmission 1.92
    * vpnc 0.5.3
    * vsftpd 2.2.2: add SSL support
    * wget 1.12
    * zlib 1.2.4

- Remove packages, libs, modules, tools: