@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.15.0
-# Sat Sep  5 13:24:37 2009
+# Busybox version: 1.16.1
+# Sat Apr  3 11:50:15 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -14,6 +14,8 @@ CONFIG_HAVE_DOT_CONFIG=y
 #
 # CONFIG_DESKTOP is not set
 # CONFIG_EXTRA_COMPAT is not set
+CONFIG_INCLUDE_SUSv2=y
+# CONFIG_USE_PORTABLE_CODE is not set
 CONFIG_FEATURE_BUFFERS_USE_MALLOC=y
 # CONFIG_FEATURE_BUFFERS_GO_ON_STACK is not set
 # CONFIG_FEATURE_BUFFERS_GO_IN_BSS is not set
@@ -59,7 +61,6 @@ CONFIG_EXTRA_CFLAGS=""
 CONFIG_NO_DEBUG_LIB=y
 # CONFIG_DMALLOC is not set
 # CONFIG_EFENCE is not set
-CONFIG_INCLUDE_SUSv2=y
 
 #
 # Installation Options
@@ -120,6 +121,7 @@ CONFIG_FEATURE_SEAMLESS_LZMA=y
 # CONFIG_FEATURE_DPKG_DEB_EXTRACT_ONLY is not set
 # CONFIG_GUNZIP is not set
 # CONFIG_GZIP is not set
+# CONFIG_FEATURE_GZIP_LONG_OPTIONS is not set
 # CONFIG_LZOP is not set
 # CONFIG_LZOP_COMPR_HIGH is not set
 # CONFIG_RPM2CPIO is not set
@@ -133,6 +135,7 @@ CONFIG_FEATURE_TAR_OLDGNU_COMPATIBILITY=y
 CONFIG_FEATURE_TAR_GNU_EXTENSIONS=y
 CONFIG_FEATURE_TAR_LONG_OPTIONS=y
 CONFIG_FEATURE_TAR_UNAME_GNAME=y
+# CONFIG_FEATURE_TAR_NOPRESERVE_TIME is not set
 # CONFIG_UNCOMPRESS is not set
 CONFIG_UNLZMA=y
 CONFIG_FEATURE_LZMA_FAST=y
@@ -148,15 +151,19 @@ CONFIG_FEATURE_LZMA_FAST=y
 # CONFIG_CHGRP is not set
 # CONFIG_CHMOD is not set
 # CONFIG_CHOWN is not set
+# CONFIG_FEATURE_CHOWN_LONG_OPTIONS is not set
 # CONFIG_CHROOT is not set
 # CONFIG_CKSUM is not set
 # CONFIG_COMM is not set
 # CONFIG_CP is not set
+# CONFIG_FEATURE_CP_LONG_OPTIONS is not set
 # CONFIG_CUT is not set
 # CONFIG_DATE is not set
 # CONFIG_FEATURE_DATE_ISOFMT is not set
+# CONFIG_FEATURE_DATE_COMPAT is not set
 # CONFIG_DD is not set
 # CONFIG_FEATURE_DD_SIGNAL_HANDLING is not set
+# CONFIG_FEATURE_DD_THIRD_STATUS_LINE is not set
 # CONFIG_FEATURE_DD_IBS_OBS is not set
 # CONFIG_DF is not set
 # CONFIG_FEATURE_DF_FANCY is not set
@@ -259,7 +266,7 @@ CONFIG_TR=y
 # CONFIG_FEATURE_HUMAN_READABLE is not set
 
 #
-# Common options for md5sum, sha1sum
+# Common options for md5sum, sha1sum, sha256sum, sha512sum
 #
 # CONFIG_FEATURE_MD5_SHA1_SUM_CHECK is not set
 
@@ -306,9 +313,8 @@ CONFIG_DEFAULT_SETFONT_DIR=""
 # CONFIG_FEATURE_AWK_LIBM is not set
 # CONFIG_CMP is not set
 # CONFIG_DIFF is not set
-# CONFIG_FEATURE_DIFF_BINARY is not set
+# CONFIG_FEATURE_DIFF_LONG_OPTIONS is not set
 # CONFIG_FEATURE_DIFF_DIR is not set
-# CONFIG_FEATURE_DIFF_MINIMAL is not set
 # CONFIG_ED is not set
 # CONFIG_PATCH is not set
 # CONFIG_SED is not set
@@ -352,6 +358,7 @@ CONFIG_FEATURE_VI_MAX_LEN=0
 # CONFIG_FEATURE_FIND_PATH is not set
 # CONFIG_FEATURE_FIND_REGEX is not set
 # CONFIG_FEATURE_FIND_CONTEXT is not set
+# CONFIG_FEATURE_FIND_LINKS is not set
 # CONFIG_GREP is not set
 # CONFIG_FEATURE_GREP_EGREP_ALIAS is not set
 # CONFIG_FEATURE_GREP_FGREP_ALIAS is not set
@@ -441,6 +448,7 @@ CONFIG_LAST_SYSTEM_ID=0
 # Options common to multiple modutils
 #
 # CONFIG_FEATURE_2_4_MODULES is not set
+# CONFIG_FEATURE_INSMOD_TRY_MMAP is not set
 # CONFIG_FEATURE_INSMOD_VERSION_CHECKING is not set
 # CONFIG_FEATURE_INSMOD_KSYMOOPS_SYMBOLS is not set
 # CONFIG_FEATURE_INSMOD_LOADINKMEM is not set
@@ -476,8 +484,10 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_FINDFS is not set
 # CONFIG_FREERAMDISK is not set
 # CONFIG_FSCK_MINIX is not set
+# CONFIG_MKFS_EXT2 is not set
 # CONFIG_MKFS_MINIX is not set
 # CONFIG_FEATURE_MINIX2 is not set
+# CONFIG_MKFS_REISER is not set
 # CONFIG_MKFS_VFAT is not set
 # CONFIG_GETOPT is not set
 # CONFIG_FEATURE_GETOPT_LONG is not set
@@ -490,6 +500,8 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_IPCRM is not set
 # CONFIG_IPCS is not set
 # CONFIG_LOSETUP is not set
+# CONFIG_LSPCI is not set
+# CONFIG_LSUSB is not set
 # CONFIG_MDEV is not set
 # CONFIG_FEATURE_MDEV_CONF is not set
 # CONFIG_FEATURE_MDEV_RENAME is not set
@@ -502,6 +514,7 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_FEATURE_USE_TERMIOS is not set
 # CONFIG_VOLUMEID is not set
 # CONFIG_FEATURE_VOLUMEID_EXT is not set
+# CONFIG_FEATURE_VOLUMEID_BTRFS is not set
 # CONFIG_FEATURE_VOLUMEID_REISERFS is not set
 # CONFIG_FEATURE_VOLUMEID_FAT is not set
 # CONFIG_FEATURE_VOLUMEID_HFS is not set
@@ -575,6 +588,7 @@ CONFIG_FEATURE_CROND_DIR=""
 # CONFIG_EJECT is not set
 # CONFIG_FEATURE_EJECT_SCSI is not set
 # CONFIG_FBSPLASH is not set
+# CONFIG_FLASHCP is not set
 # CONFIG_FLASH_LOCK is not set
 # CONFIG_FLASH_UNLOCK is not set
 # CONFIG_FLASH_ERASEALL is not set
@@ -618,6 +632,7 @@ CONFIG_FEATURE_MAKEDEVS_TABLE=y
 # CONFIG_TIMEOUT is not set
 # CONFIG_TTYSIZE is not set
 # CONFIG_VOLNAME is not set
+# CONFIG_WALL is not set
 # CONFIG_WATCHDOG is not set
 
 #
@@ -637,6 +652,7 @@ CONFIG_FEATURE_MAKEDEVS_TABLE=y
 # CONFIG_FAKEIDENTD is not set
 # CONFIG_FTPD is not set
 # CONFIG_FEATURE_FTP_WRITE is not set
+# CONFIG_FEATURE_FTPD_ACCEPT_BROKEN_LIST is not set
 # CONFIG_FTPGET is not set
 # CONFIG_FTPPUT is not set
 # CONFIG_FEATURE_FTPGETPUT_LONG_OPTIONS is not set
@@ -702,6 +718,8 @@ CONFIG_IFUPDOWN_IFSTATE_PATH=""
 # CONFIG_FEATURE_NETSTAT_WIDE is not set
 # CONFIG_FEATURE_NETSTAT_PRG is not set
 # CONFIG_NSLOOKUP is not set
+# CONFIG_NTPD is not set
+# CONFIG_FEATURE_NTPD_SERVER is not set
 # CONFIG_PING is not set
 # CONFIG_PING6 is not set
 # CONFIG_FEATURE_FANCY_PING is not set
@@ -713,22 +731,25 @@ CONFIG_IFUPDOWN_IFSTATE_PATH=""
 # CONFIG_FEATURE_TELNET_AUTOLOGIN is not set
 # CONFIG_TELNETD is not set
 # CONFIG_FEATURE_TELNETD_STANDALONE is not set
+# CONFIG_FEATURE_TELNETD_INETD_WAIT is not set
 # CONFIG_TFTP is not set
 # CONFIG_TFTPD is not set
 # CONFIG_FEATURE_TFTP_GET is not set
 # CONFIG_FEATURE_TFTP_PUT is not set
 # CONFIG_FEATURE_TFTP_BLOCKSIZE is not set
+# CONFIG_FEATURE_TFTP_PROGRESS_BAR is not set
 # CONFIG_TFTP_DEBUG is not set
 # CONFIG_TRACEROUTE is not set
+# CONFIG_TRACEROUTE6 is not set
 # CONFIG_FEATURE_TRACEROUTE_VERBOSE is not set
 # CONFIG_FEATURE_TRACEROUTE_SOURCE_ROUTE is not set
 # CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
-# CONFIG_APP_UDHCPD is not set
-# CONFIG_APP_DHCPRELAY is not set
-# CONFIG_APP_DUMPLEASES is not set
+# CONFIG_UDHCPD is not set
+# CONFIG_DHCPRELAY is not set
+# CONFIG_DUMPLEASES is not set
 # CONFIG_FEATURE_UDHCPD_WRITE_LEASES_EARLY is not set
 CONFIG_DHCPD_LEASES_FILE=""
-# CONFIG_APP_UDHCPC is not set
+# CONFIG_UDHCPC is not set
 # CONFIG_FEATURE_UDHCPC_ARPING is not set
 # CONFIG_FEATURE_UDHCP_PORT is not set
 CONFIG_UDHCP_DEBUG=0
@@ -793,6 +814,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 # CONFIG_FEATURE_TOP_DECIMALS is not set
 # CONFIG_FEATURE_TOP_SMP_PROCESS is not set
 # CONFIG_FEATURE_TOPMEM is not set
+# CONFIG_FEATURE_SHOW_THREADS is not set
 # CONFIG_UPTIME is not set
 # CONFIG_WATCH is not set
 
@@ -835,8 +857,6 @@ CONFIG_FEATURE_SH_IS_NONE=y
 # CONFIG_ASH is not set
 # CONFIG_ASH_BASH_COMPAT is not set
 # CONFIG_ASH_JOB_CONTROL is not set
-# CONFIG_ASH_READ_NCHARS is not set
-# CONFIG_ASH_READ_TIMEOUT is not set
 # CONFIG_ASH_ALIAS is not set
 # CONFIG_ASH_GETOPTS is not set
 # CONFIG_ASH_BUILTIN_ECHO is not set
@@ -859,6 +879,7 @@ CONFIG_FEATURE_SH_IS_NONE=y
 # CONFIG_HUSH_FUNCTIONS is not set
 # CONFIG_HUSH_LOCAL is not set
 # CONFIG_HUSH_EXPORT_N is not set
+# CONFIG_HUSH_RANDOM_SUPPORT is not set
 # CONFIG_LASH is not set
 # CONFIG_MSH is not set
 # CONFIG_SH_MATH_SUPPORT is not set
